2009-02-05  higepon  <higepon@users.sourceforge.jp>

        * lib/srfi/%3A28.ss: Added SRFI-28.

        * lib/srfi/%3A27.ss: Added SRFI-27 ported from Ypsilon Scheme.

2009-02-04  kokosabu  <kokosabug@gmail.com>

        * PortProcedures.cpp: Added native-transcoder.

2009-02-04  higepon  <higepon@users.sourceforge.jp>

        * test-data.scm (try-ffi): Improved tests of ffi not to raise some errors thanks to mjt.

        * configure.ac: Fixed copiler opt flags thanks to mjt.

        * Makefile.am (libffitest.so.1.0): gcc -> $(CC) thanks to mjt.

        * psyntax/compat.ss : Now loading serialized library become much faster.
                              We precompiled the invoke code and the visit code both on serialization phase.

2009-02-03  higepon  <higepon@users.sourceforge.jp>

        * tools/psyntax-r6rs/rev10_to_10/psyntax/expander.ss (psyntax): Not to use cache rib. It is not fast and make fasl file much larger.

2009-02-03  kokosabu  <kokosabu@gmail.com>

        * putDatum : Added write of Transcoder.

2009-02-03  higepon  <higepon@users.sourceforge.jp>

        * FileBinaryInputPort.cpp (bufRead1) : Added for specialized case.

        * lib/srfi/%3A14.ss : Added srfi 13 and 14 ported from Ypsilon Scheme. (Thanks to y.fujita)

2009-02-02  higepon  <higepon@users.sourceforge.jp>

        * lib/mosh/control.ss : Added begin0 and let1. 

        * lib/mosh/ffi.ss (find-shared-libray): Added.

        * lib/mosh/control.ss : Added (mosh control) and aif.

        * FFI.cpp : Added double support for x86-64.

2009-02-01  higepon  <higepon@users.sourceforge.jp>

        * configure.ac: Added --enable-developer flag default No.
                        Mosh Developer *should* enable this.

        * Makefile.am (install-data-hook): Now we pre-compile R6RS libraries on installation.

        * mosh_config: Added.

        * lib/mosh/config.ss.in (mosh): Added (mosh config) library and document.

2009-01-31  higepon  <higepon@users.sourceforge.jp>
