@@ -1,14 +1,15 @@
 (import (rnrs)
         (lambda wiki)
         (mosh cgi)
-        (srfi :26)
-        (srfi :98)
         (srfi :8)
         (srfi :13)
         (srfi :14)
         (srfi :19)
+        (srfi :26)
         (srfi :27)
         (srfi :28)
+        (srfi :38)
+        (srfi :98)
         (clos user)
        (mosh pp)
        (mosh test)
