@@ -1,5 +1,7 @@
 2009-02-05  higepon  <higepon@users.sourceforge.jp>
 
+        * lib/srfi/%3A38.ss: Added SRFI-38.
+
         * lib/srfi/%3A28.ss: Added SRFI-28.
 
         * lib/srfi/%3A27.ss: Added SRFI-27 ported from Ypsilon Scheme.
@@ -35,7 +37,7 @@
 
 2009-02-02  higepon  <higepon@users.sourceforge.jp>
 
-        * lib/mosh/control.ss : Added begin0 and let1. 
+        * lib/mosh/control.ss : Added begin0 and let1.
 
         * lib/mosh/ffi.ss (find-shared-libray): Added.
 
